# uid2-attestation-aws

./: Dockerfile  README.md
.github/workflows/: build-and-publish.yaml  build-and-test.yaml  publish-snapshot.yaml  release.yaml
attestation-aws/: .project  pom.xml  version.json
attestation-aws/src/main/java/com/uid2/attestation/aws/: NitroAttestation.java  NitroAttestationProvider.java
attestation-aws/src/test/java/com/uid2/attestation/aws/: NitroAttestationParamsTest.java  NitroAttestationProviderTest.java  NitroAttestationRequestTest.java  NitroExceptionTest.java
example/: .project  pom.xml
jnsm/: Cargo.toml
jnsm/src/: lib.rs
