[package]
name        = "jnsm"
version     = "0.1.0"
authors     = ["uid2 <uid2@uid2.com>"]
description = "JNI attestation interface for AWS Nitro"
repository  = ""
license     = "MIT"
edition     = "2018"

[dependencies]
aws-nitro-enclaves-cose = "0.4"
nsm-driver  = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git" }
nsm-io      = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git" }
jni         = "0.21.1"
bincode     = "1.3.3"
serde_bytes = "0.11"
thiserror   = "1.0"

[lib]
crate-type = ["cdylib"]